papers/sbst18/data/6thresults/results_evosuite_120/FREEHEP-6_1/metrics/log_detailed.txt

>>> TOOL NAME:  evosuite

>>> BENCHMARK:  FREEHEP-6

>>> RUN NUMBER: 1

>>> MODE: --only-compute-metrics
Creating directory ./temp
Creating directory ./temp/data
Creating directory ./temp/testcases
Executing /home/evosuite_6th/./runtool
>> BENCHMARK
>> /var/benchmarks/projects/freehep/math/freehep-jminuit/src/main/java
>> /var/benchmarks/projects/freehep/math/freehep-jminuit/target/classes
>> 1
>> /var/benchmarks/projects/freehep/math/freehep-jminuit/target/classes
>> 0
expecting CLASSPATH or READY
<< CLASSPATH
expecting number
<< 1
expecting directory or jar file
<< /home/evosuite_6th/lib/evosuite-master-1.0.5-SNAPSHOT.jar
<< READY
>> 120


### COMPUTING METRICS ###: org.freehep.math.minuit.SimplexBuilder


Starting class org.freehep.math.minuit.SimplexBuilder


Ending class org.freehep.math.minuit.SimplexBuilder
Creating directory results_evosuite_120/FREEHEP-6_1/temp/testcases/bin
Creating dummy JUnit test file

---Compilation---

===
javac command line:
/usr/lib/jvm/java-8-oracle/bin/javac -sourcepath /home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases -cp /var/benchmarks/projects/freehep/math/freehep-jminuit/target/classes:/usr/local/bin/lib/junit-4.12.jar:/usr/local/bin/lib/hamcrest-core-1.3.jar:/home/evosuite_6th/lib/evosuite-master-1.0.5-SNAPSHOT.jar -d results_evosuite_120/FREEHEP-6_1/temp/testcases/bin /home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/SBSTDummyForCoverageAndMutationCalculation.java

Compiling with scaffolding tests
>>  /home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/org/freehep/math/minuit/SimplexBuilder_ESTest_scaffolding.java /home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/org/freehep/math/minuit/SimplexBuilder_ESTest.java

===
javac command line:
/usr/lib/jvm/java-8-oracle/bin/javac -sourcepath /home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases -cp /var/benchmarks/projects/freehep/math/freehep-jminuit/target/classes:/usr/local/bin/lib/junit-4.12.jar:/usr/local/bin/lib/hamcrest-core-1.3.jar:/home/evosuite_6th/lib/evosuite-master-1.0.5-SNAPSHOT.jar -d results_evosuite_120/FREEHEP-6_1/temp/testcases/bin  /home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/org/freehep/math/minuit/SimplexBuilder_ESTest_scaffolding.java /home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/org/freehep/math/minuit/SimplexBuilder_ESTest.java

/home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/org/freehep/math/minuit/SimplexBuilder_ESTest.java:41: error: method doReturn in class Mockito cannot be applied to given types;
      doReturn(double0, double0, double0, double0).when(fCNBase0).valueOf(any(double[].class));
      ^
  required: Object
  found: double,double,double,double
  reason: actual and formal argument lists differ in length
/home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/org/freehep/math/minuit/SimplexBuilder_ESTest.java:261: error: method doReturn in class Mockito cannot be applied to given types;
      doReturn(0.0, 0.0, 0.0).when(fCNBase0).valueOf(any(double[].class));
      ^
  required: Object
  found: double,double,double
  reason: actual and formal argument lists differ in length
/home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/org/freehep/math/minuit/SimplexBuilder_ESTest.java:360: error: method doReturn in class Mockito cannot be applied to given types;
      doReturn(0.0, 0.0, 0.0, 0.0, 0.0).when(fCNBase0).valueOf(any(double[].class));
      ^
  required: Object
  found: double,double,double,double,double
  reason: actual and formal argument lists differ in length
/home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/org/freehep/math/minuit/SimplexBuilder_ESTest.java:420: error: method doReturn in class Mockito cannot be applied to given types;
      doReturn(0.0, 0.0, 0.0).when(fCNBase0).valueOf(any(double[].class));
      ^
  required: Object
  found: double,double,double
  reason: actual and formal argument lists differ in length
/home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/org/freehep/math/minuit/SimplexBuilder_ESTest.java:512: error: method doReturn in class Mockito cannot be applied to given types;
      doReturn(0.0, 0.0, 0.0, 0.0).when(fCNBase0).valueOf(any(double[].class));
      ^
  required: Object
  found: double,double,double,double
  reason: actual and formal argument lists differ in length
/home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/org/freehep/math/minuit/SimplexBuilder_ESTest.java:587: error: method doReturn in class Mockito cannot be applied to given types;
      doReturn(0.0, 0.0, 0.0, 0.0, 0.0).when(fCNBase0).valueOf(any(double[].class));
      ^
  required: Object
  found: double,double,double,double,double
  reason: actual and formal argument lists differ in length
6 errors
Failed to compile 'org/freehep/math/minuit/SimplexBuilder_ESTest.java'!
shaded.org.apache.commons.exec.ExecuteException: Process exited with an error: 1 (Exit value: 1)
	at shaded.org.apache.commons.exec.DefaultExecutor.executeInternal(DefaultExecutor.java:377)
	at shaded.org.apache.commons.exec.DefaultExecutor.execute(DefaultExecutor.java:160)
	at shaded.org.apache.commons.exec.DefaultExecutor.execute(DefaultExecutor.java:147)
	at sbst.benchmark.TestSuite.compile(TestSuite.java:273)
	at sbst.benchmark.TestSuite.<init>(TestSuite.java:94)
	at sbst.benchmark.TranscriptWriter.endClass(TranscriptWriter.java:157)
	at sbst.benchmark.RunTool.execute(RunTool.java:172)
	at sbst.benchmark.RunTool.run(RunTool.java:95)
	at sbst.benchmark.Main.main(Main.java:178)
Compiling with scaffolding tests

---Timing Information---
Running tests with the following classpath: 
/var/benchmarks/projects/freehep/math/freehep-jminuit/target/classes:/usr/local/bin/lib/junit-4.12.jar:/usr/local/bin/lib/hamcrest-core-1.3.jar:/home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/bin:/home/evosuite_6th/lib/evosuite-master-1.0.5-SNAPSHOT.jar
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated

---The tests are re-executed other four times to find the flaky ones---
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated

=== Run Jacoco for Coverage ===
Number of instrumented file = 84
Running tests with the following classpath: 
/home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/classes_instrumented:/usr/local/bin/lib/hamcrest-core-1.3.jar:/usr/local/bin/lib/junit-4.12.jar:/home/evosuite_6th/lib/evosuite-master-1.0.5-SNAPSHOT.jar:/home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/bin
Running the tests: [SBSTDummyForCoverageAndMutationCalculation]
Executions terminated
Number of file with coverage information = 84
Extracted coverage data for the class org/freehep/math/minuit/SimplexBuilder

=== Run PIT ===
Generate mutations via PIT
 Running tests against generated Mutants
Running PITWrapper with the following data:
> CP = /usr/local/bin/lib/junit-4.12.jar:/usr/local/bin/lib/hamcrest-core-1.3.jar:/var/benchmarks/projects/freehep/math/freehep-jminuit/target/classes:/home/evosuite_6th/lib/evosuite-master-1.0.5-SNAPSHOT.jar:/home/evosuite_6th/results_evosuite_120/FREEHEP-6_1/temp/testcases/bin
> CUT = org.freehep.math.minuit.SimplexBuilder
> Test cases = [org.freehep.math.minuit.SimplexBuilder_ESTest, org.freehep.math.minuit.SimplexBuilder_ESTest_scaffolding]
Matching Jacoco with PIT: find covered mutations
Run tests against the covered mutations (i.e., mutants infecting on covered lines according to Jacoco)

>>> RESULTS:
	Tool name: evosuite
	Benchmark: FREEHEP-6
	Class Under Test: org.freehep.math.minuit.SimplexBuilder
	Run number: 1
	Tool preparation time (ms): 348
	Tool test cases generation time (ms): 95562
	Test cases execution time (ms): 7
	Test case number: 8
	Uncompilable Test Classes: 1
	Broken tests number: 0
	Failing tests number: 0
	Lines total: 97
	Lines covered: 0
	Lines coverage ratio (%): 0.0
	Conditions total: 54
	Conditions covered: 0
	Conditions coverage ratio (%): 0.0
	Mutants total: 100
	Mutants covered: 0
	Mutants coverage ratio (%): 0.0
	Mutants killed: 0
	Mutants killed ratio (%): 0.0
	Mutants alive: 100


Class org.freehep.math.minuit.SimplexBuilder ended.
Stopping process...
Tool subprocess is an instance of java.lang.UNIXProcess
Tool subprocess Id is 9831
Killing master process 9831
Executing command kill -9 9831
Execution of command kill -9 9831 finished.
Process was destroyed
